Fixed scrolling issue Removed overflow on 3 styles Fixed header pixels

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,44 +9,41 @@
 
 body {
     margin: 0;
-    overflow: hidden;
 }
 
 
 #root {
     width: 100%;
-    overflow: hidden;
 }
 
 .main-div {
-    overflow: hidden;
     height: 100vh;
 }
 
 .main-container {
     height: 100vh;
     text-align: center;
-    overflow: hidden;
-
 }
 
 .header-container {
+    position: fixed;
+    top: 0;
     background-color: #282C37;
-    height: 40px;
+    height: 41px;
     width: 100%;
     display: flex;
     vertical-align: middle;
     justify-content: center;
-     font-family: -apple-system,
-     BlinkMacSystemFont,
-     'Segoe UI',
-     Roboto,
-     Oxygen,
-     Ubuntu,
-     Cantarell,
-     'Open Sans',
-     'Helvetica Neue',
-     sans-serif;
+    font-family: -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
 
 
@@ -59,7 +56,8 @@ body {
 
 .content-container {
     height: 100vh;
-    padding-bottom: 101px;
+    padding-bottom: 60px;
+    margin-top: 40px;
     background-image: url("../images/dice.jpg");
     background-repeat: no-repeat;
     background-size: cover;
