--- a/src/components/event-details/player-list.css
+++ b/src/components/event-details/player-list.css
@@ -1,9 +1,7 @@
 .playerlist-date-address-container{
-        height: 25vh;
-        border-bottom: 1px black solid;
-        display: flex;
-        vertical-align: middle;
-        justify-content: center;
+    border-bottom: 1px black solid;
+    vertical-align: middle;
+    justify-content: center;
 }
 
 .player-list>h5 {
@@ -14,108 +12,5 @@
     margin: 0px;
     margin-top: 1%;
     margin-bottom: 1%;
-    font-family: -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
-        margin-top:2vh;
+    margin-top:2vh;
 }
- 
- /* .generic-container>.player-list-title {
-     background-color: #282C37;
-     color: white;
-     padding: 1px;
-        margin-bottom: 1%;
-        font-family: -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
-        font-weight: bold;
- }
-
- .generic-container>.player-list-date {
-     background-color: #D9E1E8;
-     border: 1px solid black;
-     font-size: 1.5em;
-     color: black;
-     padding: 15px;
-        margin-top:1%;
-        margin-bottom: 1%;
- }
-
- .generic-container>.player-list-address {
-     background-color: #D9E1E8;
-     border: 1px solid black;
-     font-size: 1.5em;
-     color: black;
-     padding: 30px;
-        margin-top:1%;
-        margin-bottom: 1%;
- }
-
- .generic-container>.player-list-limit {
-     background-color: #D9E1E8;
-     border: 1px solid black;
-     font-size: 1.5em;
-     color: black;
-     padding: 20px;
-        margin-top:1%;
-        margin-bottom: 1%;
- }
-
-
- .player-list>h5 {
-     background-color: #282C37;
-     font-weight: bold;
-     color: white;
-     padding: 25px;
-     margin: 0px;
-        margin-top:1%;
-        margin-bottom: 1%;
-        font-family: -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
- }
-
- table>tbody>tr {
-     background-color: #D9E1E8;
-     border: 1px solid black;
-     font-size: 1.5em;
-     color: black;
-     padding: 25px;
-        margin-top:1%;
-        margin-bottom: 1%;
- }
-
- .playerlist-container {
-     overflow: scroll;
-     height: 88vh;
- }
-
- .back {
-     background-image: linear-gradient(beige, white);
- }
-
- .back-to-game {
-     background-color: forestgreen;
-     width: 100%;
- } */
